--- a/work.html
+++ b/work.html
@@ -157,6 +157,75 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-3.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>Planliatic</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>A to-do app to plan your day.</p>
+									<p class="read"><a href="https://github.com/psalmsdove/Planliatic">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>FocS On</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>A focus app to maximize your productivity.</p>
+									<p class="read"><a href="https://github.com/psalmsdove/FocS-On">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-5.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>Budgethut</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>An expense tracker app</p>
+									<p class="read"><a href="https://github.com/psalmsdove/Budgethut">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="work-entry animate-box">
+							<a href="work.html" class="work-img" style="background-image: url(images/work-6.jpg);">
+								<div class="display-t">
+									<div class="work-name">
+										<h2>Passrator</h2>
+									</div>
+								</div>
+							</a>
+							<div class="col-md-4 col-md-offset-4">
+								<div class="desc">
+									<p>A password generator</p>
+									<p class="read"><a href="https://github.com/psalmsdove/Passrator">View details</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+
 
 					<footer>
 						<div id="footer">
