--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
             Contact
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link fs-5" href="blog.html" aria-label="A sample content page">
+            Blog
+          </a>
+        </li>
 
       </ul>
 
